--- a/sass/_contents.scss
+++ b/sass/_contents.scss
@@ -351,36 +351,98 @@ a {
     background-size: cover;
     background-position: top;
     background-attachment: fixed;
-    height: 75vh;
+    height: 100vh;
 }
 .about-mainPage {
-   background-color: #fff;
+   background-color: #000;
+   background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.9)),url(../img/14449860_1466973049986072_3890932985877826762_n.jpg);
+   background-size: contain;
+   background-position: right;
+   background-attachment: fixed;
+   background-repeat: no-repeat;
+   
    height: auto;
    color: #000;
+   padding-bottom: 5rem;
+   
 
 }
 
 .about-textbox {
-   width: 40%;
+   width: 45%;
+   max-width: 600px;
    margin-left: auto;
    margin-right: auto;
-   margin-bottom: 5rem;
-   margin-top: 5rem;
+   padding-top: 3rem;
+   padding-left: 3rem;
+   padding-right: 3rem;
    text-align: justify;
+   border-radius: 5px;
+   border: 1px solid  #faf9f9;
+   background-color: rgba(255, 255, 255,.7);
+   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-content: center;
+   align-items: center;
+   
+   
 }
 
+.about-textbox img {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    opacity: .7;
+}
+
+img.logo {
+    height: 5rem; 
+    width: 10rem;
+    margin-top: -.75rem;
+}
+/*
+.about-textbox p:first-of-type::before {
+        content: "\201C";
+        //content: "\201D";
+        position: absolute;
+        top: -1rem;
+        left: -1rem;
+        font-size: 10rem;
+        font-family: sans-serif;
+        line-height: 1;
+        color: #f0eeee;
+}
+
+*/
+/*
+.about-textbox p:nth-of-type(7)::after {
+        content: "\201D";
+        position: absolute;
+        top: 19.5rem;
+        left: 26rem;
+        font-size: 10rem;
+        font-family: sans-serif;
+        line-height: 1;
+        color: #f0eeee;
+}
+*/
 .about-mainPage-heading  {
     text-transform: uppercase;
     margin-bottom: 4rem;
     font-size: 3rem;
     font-weight: 300;
     letter-spacing: 3px;
-    color: #000;
+    color: #fff;
     display: flex;
     align-content: center;
     align-items: center;
     justify-content: center;
-
+    padding-top: 5rem;
     animation-name: moveInTop;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -393,7 +455,7 @@ a {
     
     //background-image: linear-gradient(rgba(0,0, 0 ,.3 ), rgba(0,0, 0 ,.7 )),  url(../img/19401810_1827413680921149_5686377022244835580_o.jpg);
     background-image: url(../img/background-2847037_1280.jpg);
-    height: 80vh;
+    height: 75vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -413,6 +475,7 @@ a {
 .section__contact-main-heading-heading {
     text-transform: uppercase;
     margin-top: 15%;
+    margin-bottom: 4rem;
     font-size: 3rem;
     font-weight: 300;
     letter-spacing: 3px;
@@ -432,35 +495,48 @@ a {
 
 .contact {
 //background-color: #007bb5;
-color: #000;
+    background-image: linear-gradient(rgba(0,0, 0 ,.1 ), rgba(0,0, 0 ,.9 )), url(../img/sunset-2794833_1280.jpg);
+    height: 70vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    
+}
+
+.contact__main-container {
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 .section__contact-mainPage {
     /*background-image: linear-gradient(rgba(0,0, 0 ,.3 ), rgba(0,0, 0 ,.9 )), url(../img/22791885_1954961334520572_6302066474532272361_o.jpg);
    
     height: auto;*/
-    //background-image: linear-gradient(rgba(0,0, 0 ,.1 ), rgba(0,0, 0 ,.9 )), url(../img/IMG_4476.jpg);
-    background-color: pink;
-    background-size: cover;
+    background-image: linear-gradient(rgba(255,255, 255 ,.6 ), rgba(255,255, 255,.6 )), url(../img/contact-us-1014232_1280.png);
+    background-size: contain;
     background-position: center;
     background-attachment: fixed;
-    height: 50rem;
+    color: #000;
+    
    
 
 }
 
 .section__contact-mainPage-heading {
     text-transform: uppercase;
-    margin-top: 5%;
+    padding-top: 5rem;
     font-size: 3rem;
     font-weight: 300;
     letter-spacing: 3px;
-
+    margin-bottom: 4rem;
     display: flex;
     align-content: center;
     align-items: center;
     justify-content: center;
-
+    
     animation-name: moveInTop;
     animation-duration: 1s;
     animation-timing-function: ease-out;
@@ -482,7 +558,7 @@ color: #000;
 .contact__main-container {
     display: flex;
     width: 100%;
-    margin-top: 5%;
+    
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5rem;
@@ -597,14 +673,16 @@ color: #000;
 /*-------------------------------------------FOOTER---------------------------------------------------------------*/
 .footer{
     background-color: #000;
-    height: 3rem;
+    height: 5rem;
     display: flex;
     align-items: center;
     align-content: center;
     justify-content: center;
+    
     &__paragraph {
         font-size: 15px;
         color: rgb(119, 119, 119);
+        
         & a:link, & a:visited {
             color: rgb(119, 119, 119);
             text-decoration: none;
